@@ -1,5 +1,6 @@
 from __future__ import generators # for enumerate
 from sqlobject import *
+from sqlobject.sqlbuilder import func
 from sqlobject.main import SQLObjectIntegrityError
 from dbtest import *
 from dbtest import setSQLiteConnectionFactory
@@ -73,6 +74,19 @@ def test_04_indexed_ended_by_exception():
         pass
     assert count == len(names)
 
+def test_05_select_limit():
+    setupIter()
+    assert len(list(IterTest.select(limit=2))) == 2
+    raises(AssertionError, IterTest.select(limit=2).distinct)
+    raises(AssertionError, IterTest.select(limit=2).clone, start=1)
+
+def test_06_like():
+    setupIter()
+    assert len(list(IterTest.select(IterTest.q.name.startswith('a')))) == 1
+    assert len(list(IterTest.select(IterTest.q.name.endswith('a')))) == 1
+    assert len(list(IterTest.select(IterTest.q.name.contains('a')))) == 1
+    assert len(list(IterTest.select(IterTest.q.name.contains(func.lower('A'))))) == 1
+
 def test_select_getOne():
     setupClass(IterTest)
     a = IterTest(name='a')
@@ -84,12 +98,6 @@ def test_select_getOne():
     b2 = IterTest(name='b')
     raises(SQLObjectIntegrityError, 'IterTest.selectBy(name="b").getOne()')
     raises(SQLObjectIntegrityError, 'IterTest.selectBy(name="b").getOne(None)')
-
-def test_05_select_limit():
-    setupIter()
-    assert len(list(IterTest.select(limit=2))) == 2
-    raises(AssertionError, IterTest.select(limit=2).distinct)
-    raises(AssertionError, IterTest.select(limit=2).clone, start=1)
 
 def test_selectBy():
     setupClass(IterTest)
